@@ -1,3 +1,11 @@
+2008-02-20  Tor Lillqvist  <tml@novell.com>
+
+	* glib/gtestutils.c (g_test_trap_fork) [Win32]: Change the
+	g_error() to g_message() to avoid stopping on warnings. At least
+	now testglib runs to completion and the old tests in it get
+	exercised even if the newfangled ones don't.
+	(g_test_trap_assertions) [Win32]: Bypass on Windows.
+
 2008-02-17  Marco Barisione  <marco@barisione.org>
 
 	* glib/gregex.c: (translate_compile_error), (g_regex_new): Avoid some
